--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.244.0",
     "next": "^13.4.12",
