--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.244.0",
     "next": "^13.4.12",
@@ -17,6 +19,7 @@
     "puppeteer": "^24.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^18.2.1",
     "tailwindcss": "^3.4.17"
   }
 }
