--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.20.7",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.244.0",
     "next": "^13.4.12",
